--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: auto;
+  background-color: #ffffff;
+  color: #000;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+  display: flex;
+  flex-flow: row;
+  width: 80vw;
+  height: auto;
+  padding: 5%;
+}
+.main__form, .main__preview-sec {
+  box-shadow: 10px 10px 5px 7px #aaa;
+  border-radius: 5px;
+  padding: 10%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.main__form {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 50%;
+  height: auto;
+  text-align: center;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.main__preview-sec {
+  width: 50%;
+  height: auto;
+  text-align: center;
 }
