Add a global font and style main__form and its sections

--- a/src/styles/educationInfo.css
+++ b/src/styles/educationInfo.css
@@ -1,5 +1,10 @@
 .education-info-input {
     display: flex;
     flex-flow: column;
-    gap: 10px;
+    gap: 5px;
+}
+
+.education-info-input__info {
+    display: flex;
+    flex-flow: row;
 }
