--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Red Hat Text';
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   text-align: center;
+  padding: 0;
+  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 #root {
@@ -18,6 +23,7 @@ h1 {
   height: auto;
   background-color: #ffffff;
   color: #000;
+  padding: 5%;
 }
 
 .main {
@@ -27,25 +33,32 @@ h1 {
   height: auto;
   padding: 5%;
 }
-.main__form, .main__preview-sec {
-  box-shadow: 10px 10px 5px 7px #aaa;
+.main__preview-sec {
+  box-shadow: 10px 10px 25px 3px #aaa;
   border-radius: 5px;
-  padding: 10%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding: 5%;
+}
+
+
+.general-info-input, .education-info-input, .experiencies-info-input  {
+  box-shadow: 10px 10px 25px 3px #aaa;
+  border-radius: 5px;
+  padding: 5%;
+  padding-bottom: 12%;
+  padding-top: 8%;
 }
 
 .main__form {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  width: 50%;
+  gap: 20px;
+  width: 40%;
   height: auto;
   text-align: center;
 }
 
 .main__preview-sec {
-  width: 50%;
+  width: 60%;
   height: auto;
   text-align: center;
 }
